Gets current system working with local db, app dir as volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,24 @@
 version: '2'
 services:
-    db:
-        image: mysql
-        ports:
-            - "3306:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: symfony
-            MYSQL_USER: symfony
-            MYSQL_PASSWORD: symfony
+#    db:
+#        image: mysql
+#        ports:
+#            - "3306:3306"
+#        environment:
+#            MYSQL_ROOT_PASSWORD: root
+#            MYSQL_DATABASE: symfony
+#            MYSQL_USER: symfony
+#            MYSQL_PASSWORD: symfony
     php:
         build: ./php-fpm
         expose:
             - "9000"
         volumes:
             - ./symfony:/var/www/symfony
-            - ./logs/symfony:/var/www/symfony/app/logs
-        links:
-            - db
     nginx:
         build: ./nginx
         ports:
-            - "80:80"
+            - "7180:80"
         links:
             - php
         volumes_from:
@@ -31,7 +28,7 @@ services:
     elk:
         image: willdurand/elk
         ports:
-            - "81:80"
+            - "7181:80"
         volumes:
             - ./elk/logstash:/etc/logstash
             - ./elk/logstash/patterns:/opt/logstash/patterns
