--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -1,18 +1,19 @@
 server {
-    server_name symfony.dev;
+    server_name dev-mthood.pamiris.com;
     root /var/www/symfony/web;
 
 
     location / {
-        try_files $uri @rewriteapp;
-    }
-
-    location @rewriteapp {
-        rewrite ^(.*)$ /app.php/$1 last;
+        try_files $uri /app.php$is_args$args;
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
+
+        fastcgi_buffers 16 256k;
+        fastcgi_buffer_size 256k;
+
         fastcgi_pass php-upstream;
+
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
