--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -5,7 +5,9 @@ MAINTAINER Vincent Composieux <vincent.composieux@gmail.com>
 RUN apk add --update \
     php5-fpm \
     php5-apcu \
+    php5-ctype \
     php5-curl \
+    php5-dom \
     php5-gd \
     php5-iconv \
     php5-imagick \
@@ -22,6 +24,7 @@ RUN apk add --update \
     php5-zlib
 
 RUN rm -rf /var/cache/apk/* && rm -rf /tmp/*
+RUN adduser -D www-data
 
 ADD symfony.ini /etc/php5/fpm/conf.d/
 ADD symfony.ini /etc/php5/cli/conf.d/
