--- a/php-fpm/symfony.pool.conf
+++ b/php-fpm/symfony.pool.conf
@@ -6,8 +6,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = nobody
-group = nobody
+user = www-data
+group = www-data
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -74,8 +74,5 @@ pm.max_spare_servers = 3
 ;---------------------
 
 ; Make specific Docker environment variables available to PHP
-env[DB_1_ENV_MYSQL_DATABASE] = $DB_1_ENV_MYSQL_DATABASE
-env[DB_1_ENV_MYSQL_USER] = $DB_1_ENV_MYSQL_USER
-env[DB_1_ENV_MYSQL_PASSWORD] = $DB_1_ENV_MYSQL_PASSWORD
 
 catch_workers_output = yes
