Current state on mthood 20200516

--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -4,13 +4,13 @@ server {
 
 
     location / {
-        try_files $uri /app.php$is_args$args;
+        try_files $uri /app_dev.php$is_args$args;
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
 
-        fastcgi_buffers 16 256k;
-        fastcgi_buffer_size 256k;
+        fastcgi_buffers 16 512k;
+        fastcgi_buffer_size 512k;
 
         fastcgi_pass php-upstream;
 
