--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER Vincent Composieux <vincent.composieux@gmail.com>
 RUN apk add --update \
     php5-fpm \
     php5-apcu \
+    php5-calendar \
     php5-ctype \
     php5-curl \
     php5-dom \
