--- a/php-fpm/symfony.pool.conf
+++ b/php-fpm/symfony.pool.conf
@@ -76,3 +76,4 @@ pm.max_spare_servers = 3
 ; Make specific Docker environment variables available to PHP
 
 catch_workers_output = yes
+php_value[memory_limit] = 3G
